---------------------------------------------------------------------------------------------------
Version: 0.17.0
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.16.6
Date: 2023-01-20
  Minor features:
    - Added shortcut to move between staged builds.
  Gui:
    - The "Hide settings" button now faces left instead of down.
---------------------------------------------------------------------------------------------------
Version: 0.16.5
Date: 2023-01-20
  Bugfixes:
    - Fix being unable to upgrade rotated assembling machines.
---------------------------------------------------------------------------------------------------
Version: 0.16.4
Date: 2023-01-20
  Bugfixes:
    - Fix error on when connecting circuit wires to an entity without its entity present in the first stage.
---------------------------------------------------------------------------------------------------
Version: 0.16.3
Date: 2023-01-20
  Locale:
    - Added additional tooltip to "only include entities in last x stage" option.
  Bugfixes:
    - When using "only include entities in last x stages", circuit connections are now properly included.
---------------------------------------------------------------------------------------------------
Version: 0.16.2
Date: 2023-01-12
  Locale:
    - Fixed staged build item tooltip
---------------------------------------------------------------------------------------------------
Version: 0.16.1
Date: 2023-01-12
  Bugfixes:
    - Fixed icons not loaded when editing blueprint grid/icon settings
    - Added stage name when editing blueprint item settings
---------------------------------------------------------------------------------------------------
Version: 0.16.0
Date: 2023-01-07
  Features:
    - More flexible blueprint settings
    - Blueprints: added option to only include entities changed in the last <n> stages