@@ -71,12 +71,13 @@ cannot-move-underground-belt-with-upgrade=Cannot move underground belt with upgr
 
 max-connections-reached-in-another-stage=Max of 5 connections reached (in another stage).
 
-cant-be-teleported-in-another-stage=__1__ does not support moving (in another stage).
+cannot-be-teleported-in-another-stage=__1__ does not support moving (in another stage).
 wires-maxed-in-another-stage=The wires can not be stretched any longer (in another stage).
 no-room-in-another-stage=__1__ will not fit (in another stage).
 cannot-move=This cannot be moved
 entities-missing=Cannot move, entities missing in another stage
 connected-entities-missing=Cannot move, power/circuit connected entities missing in another stage
+cannot-build-different-direction=Cannot overbuild existing entity in a different direction
 
 not-in-an-assembly=Not in an staged build
 no-next-stage=No next stage
