@@ -2,6 +2,7 @@
 Version: 0.17.0
 Date: ????
   Changes:
+    - Disallow overbuilding preview entities in a different direction (instead of moving entity).
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.6
 Date: 2023-01-20
